arrumando bug do dark mode na receita em tela cheia

--- a/decidir/static/decidir/styles.css
+++ b/decidir/static/decidir/styles.css
@@ -158,7 +158,7 @@ span
 {
     margin-top: 30px!important;
     flex-direction: column;
-    background-color: #f7f7f7!important;
+    background-color: #f7f7f7;
     padding: 30px;
     margin: auto;
     border-radius: 3px;
@@ -407,11 +407,25 @@ span
 }
 .textarea-dark
 {
-    background-color: #212121!important;
+    background-color: #000!important;
     border: 1px solid #e3e3e3!important;
+    color: #fff!important;
 }
 .toggler-icon-dark
 {
     border-color: #4d4Dba!important;
     background-color: #4d4Dba!important;
+}
+.container-black
+{
+    background-color: #000!important;
+}
+.col-sm-2-black
+{
+    background-color: #212121!important;
+}
+.title-full
+{
+    font-family: Helvetica, sans-serif;
+    font-weight: 700!important;
 }
